# idc-system

./: .editorconfig  .env.example  .gitignore  .prettierignore  CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.memory/: cursor.json  state.json
src-tauri/: AXUM.md  BUSINESS-OS-INTEGRATION.md  CLAUDE.md  Cargo.toml  SERDE.md  TAURI.md  THISERROR.md  TOKIO.md  TRACING.md  tauri.conf.json
src-tauri/.memory/: cursor.json  state.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_foundation.sql  002_users_settings.sql  003_catalog.sql  004_operator_shifts.sql  005_patients_visits_adjustments.sql  006_inventory_ops.sql  007_reports.sql  008_polish.sql  009_pre_ship.sql  010_sync_server_url.sql  011_purge_system_vacuum_outbox.sql  012_patient_demographics.sql  013_patients_fts_restore_fix.sql  014_doctor_default_cut.sql  015_daily_close.sql  016_visit_amount_paid_override.sql  017_daily_close_collected_discount.sql  018_report_percentage.sql  019_daily_close_report_payable.sql  020_mandoub_catalog.sql  021_visits_mandoub.sql  022_visits_discount.sql  023_visit_price_override.sql  024_settings_tenant_reconcile.sql  025_dye_price_per_check_type.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/db/: migrations.rs  mod.rs  sqlite.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/_example/: commands.rs  mod.rs
src-tauri/src/domains/_example/domain/: mod.rs
src-tauri/src/domains/_example/infrastructure/: mod.rs
src-tauri/src/domains/audit/: commands.rs  mod.rs  service.rs
src-tauri/src/domains/audit/domain/: mod.rs
src-tauri/src/domains/audit/infrastructure/: metrics_repo.rs  mod.rs  name_resolver.rs
src-tauri/src/domains/auth/: commands.rs  mod.rs  service.rs  user_service.rs
src-tauri/src/domains/auth/domain/: mod.rs
src-tauri/src/domains/auth/infrastructure/: jwt_verifier.rs  mod.rs  session_store.rs
src-tauri/src/domains/catalog/: commands.rs  events.rs  mod.rs
src-tauri/src/domains/catalog/domain/: mod.rs
src-tauri/src/domains/catalog/infrastructure/: mod.rs
src-tauri/src/domains/catalog/service/: check_subtype_service.rs  check_type_service.rs  consumption_service.rs  doctor_pricing_service.rs  doctor_service.rs  inventory_item_service.rs  mandoub_service.rs  mod.rs  operator_service.rs  operator_specialty_service.rs  push_payloads.rs
src-tauri/src/domains/inventory/: commands.rs  mod.rs
src-tauri/src/domains/inventory/service/: mod.rs
src-tauri/src/domains/patients/: commands.rs  mod.rs
src-tauri/src/domains/patients/infrastructure/: mod.rs
src-tauri/src/domains/receipts/: mod.rs
src-tauri/src/domains/reports/: commands.rs  mod.rs
src-tauri/src/domains/settings/: commands.rs  mod.rs  service.rs
src-tauri/src/domains/shifts/: commands.rs  mod.rs
src-tauri/src/domains/sync/: commands.rs  mod.rs
src-tauri/src/domains/visits/: commands.rs  mod.rs
src-tauri/src/embedded/: http_server.rs  ipc_client.rs  messages.rs  mod.rs  runner.rs
src-tauri/src/shared/: mod.rs  tz.rs
src-tauri/src/sync/: engine.rs  metrics.rs  mod.rs  outbox.rs  puller.rs  puller_entities.rs  pusher.rs
src-tauri/src/sync/conflict/: mod.rs
src-tauri/tests/: audit_edges_phase08.rs  audit_perf_phase08.rs  audit_persona_phase08.rs  audit_phase08.rs  auth_ipc_phase02.rs  auth_phase02.rs  catalog_edges_phase03.rs  catalog_gaps_phase03.rs  catalog_ipc_phase03.rs  catalog_perf_phase03.rs  catalog_persona_phase03.rs  catalog_phase03.rs  edges_phase02.rs  gaps_phase02.rs  inventory_adjustments_phase05.rs  inventory_edges_phase06.rs  inventory_ipc_phase06.rs  inventory_perf_phase06.rs  inventory_persona_phase06.rs  inventory_phase06.rs  patients_phase05.rs  perf_phase02.rs  persona_phase02.rs  preship_phase09.rs  reports_edges_phase07.rs  reports_perf_phase07.rs  reports_persona_phase07.rs  reports_phase07.rs  settings_phase02.rs  shifts_edges_phase04.rs  shifts_ipc_phase04.rs  shifts_perf_phase04.rs  shifts_persona_phase04.rs  shifts_phase04.rs  soak.rs  sync_edges_phase01.rs  sync_http_phase01.rs  sync_ipc_phase01.rs  sync_loop_phase01.rs  sync_perf_phase01.rs  (+10 more)
(+640 files in other folders)
