[package]
name = "torch-app-template"
version = "0.1.0"
description = "Torch App Template - Desktop Application"
authors = ["Torch Corp"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (for embedded mode)
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
