[package]
name = "torch-app-template"
version = "0.1.0"
description = "Torch App Template - Desktop Application"
authors = ["Torch Corp"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (for embedded mode)
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
uuid = { version = "1.20.0", features = ["v7", "serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
async-trait = "0.1.89"
bytes = "1.11.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
base64 = "0.22.1"
