[package]
name = "idc-system"
version = "1.2.2"
description = "IDC System - Desktop Application"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "idc-system"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.10.0", features = [] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
uuid = { version = "1.20.0", features = ["v7", "serde"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
async-trait = "0.1.89"
bytes = "1.11.1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
base64 = "0.22.1"
argon2 = { version = "0.5.3", default-features = false, features = ["password-hash", "std"] }
jsonwebtoken = "9.3.1"
sha2 = "0.10.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
printpdf = "0.7"

[dev-dependencies]
tauri = { version = "2.10.0", features = ["test"] }
tempfile = "3.27.0"
wiremock = "0.6.5"
